bin_PROGRAMS = isst
isst_SOURCES = gui.c main.c sql.c
noinst_HEADERS = isst.h sql.h

AM_CFLAGS = \
	@TIE_CFLAGS@ \
	@GTK_CFLAGS@ \
	@GLIB_CFLAGS@ \
	@GTHREAD_CFLAGS@ \
	@PANGO_CFLAGS@ \
	@MYSQL_CFLAGS@ \
	@ADRT_CFLAGS@ \
	-DPANGO_ENABLE_BACKEND

AM_LDFLAGS = \
	@TIE_LIBS@ \
	@TIENET_LIBS@ \
	@RENDER_LIBS@ \
	@GTK_LIBS@ \
	@GLIB_LIBS@ \
	@GTHREAD_LIBS@ \
	@PANGO_LIBS@ \
	@MYSQL_LIBS@ \
	@ADRT_LIBS@ \
	-lpthread
