EXTRA_DIST = g-adrt.c adrt-optimize.c
### bin_PROGRAMS = g-adrt adrt-optimize
### g_adrt_SOURCES = g-adrt.c
### adrt_optimize_SOURCES = adrt-optimize.c
### 
### AM_CFLAGS = \
### 	@TIE_CFLAGS@ \
### 	@GTK_CFLAGS@ \
### 	@GLIB_CFLAGS@ \
### 	@GTHREAD_CFLAGS@ \
### 	@PANGO_CFLAGS@ \
### 	@MYSQL_CFLAGS@ \
### 	@ADRT_CFLAGS@ \
### 	-DPANGO_ENABLE_BACKEND
### 
### AM_LDFLAGS = \
### 	@TIE_LIBS@ \
### 	@RENDER_LIBS@ \
### 	@GTK_LIBS@ \
### 	@GLIB_LIBS@ \
### 	@GTHREAD_LIBS@ \
### 	@PANGO_LIBS@ \
### 	@MYSQL_LIBS@ \
### 	@ADRT_LIBS@ \
### 	-lrt \
### 	-lpthread
